# SemaICP

./: CMakeLists.txt
copy/: TrajectoryFusion.cpp  gicp_cost_function.h
data/: 20200928123813483.json  20200928123816233.json  20200928123816283.json  20200928123816333.json  20200928123816383.json  20200928123816433.json  20200928123816483.json  20200928123816533.json  20200928123816583.json  projMap.pcd
data/ie/: pcpImg.pcd  projMap.pcd
data/xyzlc/: pcpImg.pcd  projMap.pcd
data/xyzrgbl/: pcpImg.pcd  projMap.pcd
src/: GlogInit.h  main.cpp  mapprojICP.cpp
src/Visul/: CMakeLists.txt  PointCloudShowAdapter.cpp  main.cpp
src/include/: Def.h  EMICP.h  GicpCostFunctionDef.h  PerceptionParser.h  PointCloudAdapter.h  PointType.hpp  SemanticPointCloud.h  SemiICP.h  SemiPointCloud.h  gicp_cost_function.h  gicp_cost_functor_autodiff.h  local_parameterization_se3.h  sqloss.h
src/src/: EMICP.cpp  PerceptionParser.cpp  PointCloudAdapter.cpp  SemanticPointCloud.cpp  SemiICP.cpp
submodules/KDTree/: CMakeLists.txt
submodules/KDTree/src/: 2DTree.cpp  2DTree.h
submodules/KDTree/test/: test.cpp
submodules/utility/: CMakeLists.txt
submodules/utility/include/: dr_utility.h
submodules/utility/src/: dr_utility.cpp
test/: CMakeLists.txt  test.cpp
